优化缓存策略，提升渲染速度，优化移动端适配

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -6,7 +6,18 @@
 
 :root {
   --el-fill-color-blank: transparent;
+
   .el-collapse-item__header {
     height: fit-content;
+  }
+
+  .full-dialog-body {
+    top: 50px;
+    height: calc(100% - 25px);
+    display: flex;
+  }
+  .full-dialog-header {
+    height: 15px;
+    display: flex;
   }
 }
